<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_menu">

    <Button
        android:id="@+id/checkAvailableFriends"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/checkAvailableFriends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkDeadlines"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkDeadlines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAvailableFriends" />

    <Button
        android:id="@+id/checkModules"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkModules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkDeadlines" />

    <Button
        android:id="@+id/checkNotes"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkModules" />

    <Button
        android:id="@+id/checkParking"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkParking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNotes" />

    <Button
        android:id="@+id/checkTimetable"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkTimetable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkParking" />

    <Button
        android:id="@+id/checkAttendance"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/trackAttendance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTimetable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/mainMenu"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/checkAvailableFriends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />
</androidx.constraintlayout.widget.ConstraintLayout>